--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,27 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">wer</h2>
+        <h2 class="card-title">asd</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: wer</li>
-            <li class="list-group-item">Email: <a href="mailto:wr">wr</a></li>
-            <li class="list-group-item">Office number: wer</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">wrwer</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: werwer</li>
-            <li class="list-group-item">Email: <a href="mailto:werwe">werwe</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/wer" target="_blank" rel="noopener noreferrer">wer</a></li>
+            <li class="list-group-item">ID: asd</li>
+            <li class="list-group-item">Email: <a href="mailto:asd">asd</a></li>
+            <li class="list-group-item">Office number: 123124</li>
         </ul>
     </div>
 </div>
