updated read me

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 
@@ -21,24 +22,115 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
+        <!-- <div class="row">
+            <div class="team-area col-12 d-flex justify-content-center"> -->
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">asd</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+        <h2 class="card-title name">Ana</h2>
+        <h3 class="card-title role"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body" id="manager">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:ana@mahdrano.com">ana@mahdrano.com</a></li>
+            <li class="list-group-item">Office number: 100</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title name">Mark</h2>
+        <h3 class="card-title role"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: asd</li>
-            <li class="list-group-item">Email: <a href="mailto:asd">asd</a></li>
-            <li class="list-group-item">Office number: 123124</li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:marcus@yahoo.com">marcus@yahoo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/marcus" target="_blank" rel="noopener noreferrer">marcus</a></li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title name">Tim</h2>
+        <h3 class="card-title role"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:tim@yahoo.com">tim@yahoo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/timothy" target="_blank" rel="noopener noreferrer">timothy</a></li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title name">Sarah</h2>
+        <h3 class="card-title role"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:sarah@yahoo.com">sarah@yahoo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/sarahesly" target="_blank" rel="noopener noreferrer">sarahesly</a></li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title name">Trisha</h2>
+        <h3 class="card-title role"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 6</li>
+            <li class="list-group-item">Email: <a href="mailto:trish@gmail.com">trish@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/imtrish" target="_blank" rel="noopener noreferrer">imtrish</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title name">Carla</h2>
+        <h3 class="card-title role"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: temp1</li>
+            <li class="list-group-item">Email: <a href="mailto:carla@stanford.edu">carla@stanford.edu</a></li>
+            <li class="list-group-item">School: Stanford</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title name">Sean Paul</h2>
+        <h3 class="card-title role"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: temp2</li>
+            <li class="list-group-item">Email: <a href="mailto:sean.paul.123238@yahoo.com">sean.paul.123238@yahoo.com</a></li>
+            <li class="list-group-item">School: UC Berkeley</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title name">Solange</h2>
+        <h3 class="card-title role"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: temp4</li>
+            <li class="list-group-item">Email: <a href="mailto:solange@csusb.edu">solange@csusb.edu</a></li>
+            <li class="list-group-item">School: Cal State University, San Bernardino</li>
         </ul>
     </div>
 </div>
 
-            </div>
-        </div>
+            <!-- </div>
+        </div> -->
     </div>
 </body>
 
